--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.3.0
   launch_review: ^2.0.0
   package_info: ^0.4.0+3
+  pull_to_refresh: ^1.4.3
   redux_persist: ^0.8.2
   redux_persist_flutter: ^0.8.1
   shared_preferences: ^0.5.2+2
