--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,26 +23,29 @@ dependencies:
   dots_indicator: ^0.0.5+1
   flipperkit_redux_middleware: ^0.0.3
   flutter_flipperkit: ^0.0.14
+  flutter_inappbrowser: ^1.2.1
   flutter_redux: ^0.5.3
   flutter_spinkit: ^3.1.0
   flutter_staggered_grid_view: ^0.3.0
+  flutter_svprogresshud: ^0.0.1
+  intl: ^0.15.8
   launch_review: ^2.0.0
   package_info: ^0.4.0+3
-  pull_to_refresh: ^1.4.3
+  pull_to_refresh: ^1.4.4
   redux_persist: ^0.8.2
   redux_persist_flutter: ^0.8.1
-  shared_preferences: ^0.5.2+2
+  shared_preferences: ^0.5.3+1
   url_launcher: ^5.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-# dependency_overrides:
-#   flutter_flipperkit:
-#     path: ../../blankapp/flutter_flipperkit
-#   flipperkit_redux_middleware:
-#     path: ../../blankapp/flutter_flipperkit_plugins/packages/flipperkit_redux_middleware
+dependency_overrides:
+  flutter_flipperkit:
+    path: ../../blankapp/flutter_flipperkit
+  flipperkit_redux_middleware:
+    path: ../../blankapp/flutter_flipperkit_plugins/packages/flipperkit_redux_middleware
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
