--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,6 @@ dependencies:
     sdk: flutter
   dio: ^2.0.16
   dots_indicator: ^0.0.5+1
-  flipperkit_redux_middleware: ^0.0.3
-  flutter_flipperkit: ^0.0.14
-  flutter_inappbrowser: ^1.2.1
   flutter_redux: ^0.5.3
   flutter_spinkit: ^3.1.0
   flutter_staggered_grid_view: ^0.3.0
@@ -40,12 +37,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  # flipperkit_redux_middleware: ^0.0.3
+  # flutter_flipperkit: ^0.0.14
 
 dependency_overrides:
-  flutter_flipperkit:
-    path: ../../blankapp/flutter_flipperkit
-  flipperkit_redux_middleware:
-    path: ../../blankapp/flutter_flipperkit_plugins/packages/flipperkit_redux_middleware
+  # flutter_flipperkit:
+  #   path: ../../blankapp/flutter_flipperkit
+  # flipperkit_redux_middleware:
+  #   path: ../../blankapp/flutter_flipperkit_plugins/packages/flipperkit_redux_middleware
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
